# cookiecutter-uv-dsproject

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  cookiecutter.json  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.claude/: CLAUDE.md
{{cookiecutter.project_slug}}/.github/: dependabot.yml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  release.yml
{{cookiecutter.project_slug}}/.ipython/profile_default/: ipython_config.py
{{cookiecutter.project_slug}}/configs/: example.yaml
{{cookiecutter.project_slug}}/docs/: Makefile  changelog.md  conf.py  index.md  readme.md
{{cookiecutter.project_slug}}/docs/_ext/: napoleon_numpy_parser.py
{{cookiecutter.project_slug}}/notebooks/: getting-started.ipynb
{{cookiecutter.project_slug}}/scripts/: train_model.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: __init__.py  dataset.py  display.py  features.py  modeling.py
{{cookiecutter.project_slug}}/templates/latex/: conf.json  index.tex.j2
{{cookiecutter.project_slug}}/tests/: test_placeholder.py
