[project]
name = "cookiecutter-uv-dsproject"
version = "1.0.0"
description = "Cookiecutter template merging cookiecutter-uv with a PyScaffold dsproject-style layout."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Your Name", email = "you@example.com" }]

[dependency-groups]
dev = [
    "cookiecutter>=2.6",
    "pytest>=8.0",
    "pytest-cookies>=0.7",
]
