[project]
name = "cookiecutter-uv-dsproject"
version = "4.0.0"
description = "Cookiecutter template merging cookiecutter-uv with a PyScaffold dsproject-style layout."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "John D. Fisher", email = "jdfenw@gmail.com" }]

[dependency-groups]
dev = [
    "cookiecutter>=2.6",
    "pytest>=8.0",
    "pytest-cookies>=0.7",
]
# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest]
ini_options.testpaths = [ "tests" ]
ini_options.addopts = "--strict-markers --strict-config --tb=short -q"
