[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.initial_version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
requires-python = ">={{ cookiecutter.min_python_version }}"
{%- if cookiecutter.license != "Proprietary" %}
license = "{{ cookiecutter.license }}"
{%- endif %}
authors = [{ name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
training = [
    "scikit-learn>=1.4",
    "joblib>=1.3",
    "pyyaml>=6.0",
]
{%- if cookiecutter.include_notebooks == "yes" %}
notebooks = [
    "jupyterlab>=4.0",
    "ipykernel>=6.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
{%- endif %}
{%- if cookiecutter.include_docs == "yes" %}
docs = [
    "sphinx>=7.0",
    "myst-parser>=3.0",
    "sphinx-autodoc2>=0.5",
    "furo>=2024.1",
]
{%- endif %}

[project.urls]
Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"

# ---------------------------------------------------------------------------
# Hatchling — src layout
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py{{ cookiecutter.min_python_version | replace('.', '') }}"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit
    "T20",    # flake8-print
    "D",      # pydocstyle
    "RUF",    # ruff-specific
    "PTH",    # flake8-use-pathlib
]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "D"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers --tb=short -q"

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/{{ cookiecutter.package_name }}"]

[tool.coverage.report]
show_missing = true
fail_under = 50

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "{{ cookiecutter.min_python_version }}"
strict = true
warn_return_any = true
warn_unused_configs = true
