[build-system]
build-backend = "hatchling.build"
requires = [ "hatchling" ]

[project]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.initial_version }}"
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
{%- if cookiecutter.license != "Proprietary" %}
license = "{{ cookiecutter.license }}"
{%- endif %}
authors = [ { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" } ]
requires-python = ">={{ cookiecutter.min_python_version }}"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
{%- if cookiecutter.min_python_version == "3.10" %}
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
{%- elif cookiecutter.min_python_version == "3.11" %}
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
{%- elif cookiecutter.min_python_version == "3.12" %}
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
{%- elif cookiecutter.min_python_version == "3.13" %}
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
{%- else %}
  "Programming Language :: Python :: 3.14",
{%- endif %}
]
dependencies = [
  "pandas>=2",
]
urls.Homepage = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
urls.Issues = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}/issues"
urls.Repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"

[dependency-groups]
dev = [
{%- if cookiecutter.type_checker == "mypy" %}
  "joblib-stubs>=1.5.2.0.20250831",
  "mypy>=1.10",
  "pandas-stubs>=2",
{%- else %}
  "joblib>=1.3",
  "ty>=0.0.39",
{%- endif %}
{%- if cookiecutter.pre_commit_tool == "prek" %}
  "prek>=0.4.3",
{%- elif cookiecutter.pre_commit_tool == "pre-commit" %}
  "pre-commit>=3.7",
{%- endif %}
  "pytest>=8",
  "pytest-cov>=5",
  "ruff>=0.4",
]

{%- if cookiecutter.include_docs == "yes" %}
docs = [
  "furo>=2024.1",
  "linkify-it-py>=2",
  "myst-parser>=3",
  "sphinx>=7",
  "sphinx-autodoc2>=0.5",
]
{%- endif %}

{%- if cookiecutter.include_notebooks == "yes" %}
notebooks = [
{%- if cookiecutter.include_notebook_ux == "yes" %}
  "docrepr>=0.2",
{%- endif %}
  "ipykernel>=6",
  "jinja2>=3.1",
  "jupyterlab>=4",
  "matplotlib>=3.8",
  "nbdime>=4",
  "seaborn>=0.13",
]
{%- endif %}
training = [
  "joblib>=1.3",
  "pyyaml>=6",
  "scikit-learn>=1.4",
]

[tool.hatch]
# ---------------------------------------------------------------------------
# Hatchling — src layout
# ---------------------------------------------------------------------------
build.targets.wheel.packages = [ "src/{{ cookiecutter.package_name }}" ]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py{{ cookiecutter.min_python_version | replace('.', '') }}"
line-length = 99
src = [ "src", "tests" ]
lint.select = [
  "A",   # flake8-builtins
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # pydocstyle
  "E",
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "PTH", # flake8-use-pathlib
  "RUF", # ruff-specific
  "S",   # flake8-bandit
  "SIM", # flake8-simplify
  "T20", # flake8-print
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [ "D100", "D104", "D203", "D213" ]
lint.per-file-ignores.".ipython/profile_default/ipython_config.py" = [ "F821" ]
lint.per-file-ignores."notebooks/**/*.ipynb" = [ "E402", "F401", "I001", "T201" ]
lint.per-file-ignores."tests/**" = [ "D", "S101" ]
lint.pydocstyle.convention = "numpy"

# ---------------------------------------------------------------------------
# {{ cookiecutter.type_checker }}
# ---------------------------------------------------------------------------
{%- if cookiecutter.type_checker == "mypy" %}
[tool.mypy]
python_version = "{{ cookiecutter.min_python_version }}"
strict = true
warn_return_any = true
warn_unused_configs = true
{%- else %}
[tool.ty.environment]
python-version = "{{ cookiecutter.min_python_version }}"

[tool.ty.src]
include = [ "src" ]
{%- endif %}

[tool.pytest]
# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
ini_options.testpaths = [ "tests" ]
ini_options.addopts = "--strict-markers --tb=short -q"

[tool.coverage]
# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
run.source = [ "src/{{ cookiecutter.package_name }}" ]
report.fail_under = 50
report.show_missing = true
